# word-parser-performance

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.MD  README.md  WORDCOUNT_HYPEROPT_DOCS.MD  WordCount.cs  bench.sh  bench_c.sh  c-quality.sh  install-deps.sh  wc.c  wordcount.c  wordcount.go  wordcount.js  wordcount.php  wordcount.rs  wordcount_c_ref  wordcount_golf.c  wordcount_hopt  wordcount_hyperopt.c
nerd c/: wc_main.c  wc_test.c  wordcount.c  wordcount.h
